# priorauth-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEOWNERS  Makefile  README.md  STATUS.md  SUBMISSION.md  docker-compose.yml  fly.a2a.toml  fly.mcp.toml  ngrok.example.yml  pyproject.toml
.cursor/rules/: a2a-agent.md  commits-and-prs.md  mcp-server.md  python-style.md  shared-contracts.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
a2a_agent/: Dockerfile  README.md  REFERENCE.md  __init__.py  _model.py  agent.py  app.py  mcp_patient_context.py  orchestration.py  pyproject.toml
a2a_agent/po_base/: __init__.py  app_factory.py  fhir_hook.py  logging_utils.py  middleware.py
a2a_agent/sub_agents/: __init__.py  criteria_evaluator.py  pa_letter.py  patient_context.py
demo/: README.md  STORYBOARD.md
demo/clinical_notes/: README.md  patient_a.md  patient_b.md  patient_c.md
demo/patients/: README.md  patient_a.json  patient_b.json  patient_c.json  patient_d.json
docs/: ARCHITECTURE.md  DIFFERENTIATION_PLAN.md  LOCAL_DEV_ONE_MACHINE.md  PLAN.md  payer_criteria_research.md  po_platform_notes.md  po_support_drafts.md
mcp_server/: Dockerfile  README.md  REFERENCE.md  __init__.py  main.py  pyproject.toml  server.py
mcp_server/criteria/: __init__.py  loader.py  schema.py
mcp_server/criteria/data/: __init__.py  aetna_lumbar_mri.v2026.json  cigna_evicore_lumbar_mri.v1_0_2026.json
mcp_server/fhir/: __init__.py  client.py  constants.py  context.py  extractors.py  notes.py
mcp_server/prompts/: __init__.py  generate_gap_fix_note_v1.md  generate_pa_letter_v1.md  generate_pa_letter_v2.md  match_criteria_v1.md
mcp_server/tools/: __init__.py  evaluate_prior_auth.py  fetch_patient_context.py  generate_gap_fix_note.py  generate_pa_letter.py  match_payer_criteria.py  run_prior_auth.py
scripts/: mcp_fetch_patient.ps1  ngrok-all.ps1  tunnels.ps1  week2_capability_check.py  week2_option_a.py
shared/: __init__.py  fhir_scopes.py  models.py  pyproject.toml
tests/: conftest.py
tests/a2a_agent/: test_agent_public_url_normalization.py  test_fhir_hook_inject.py  test_jsonrpc_path_compat_middleware.py  test_mcp_streamable_url.py  test_orchestration.py  test_sub_agents.py
tests/demo/: test_patient_bundles.py
tests/mcp_server/: test_criteria_schema.py  test_extractors.py  test_fetch_patient_context.py  test_fetch_patient_context_fhir.py  test_generate_pa_letter.py  test_letter_format.py  test_match_payer_criteria.py  test_notes.py  test_run_prior_auth.py
