[project]
name = "a2a_agent"
version = "0.0.1"
description = "Google ADK A2A agent (forked from PO Google-ADK reference)."
requires-python = ">=3.11"
dependencies = [
    "shared",
    "pydantic>=2.7,<3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "google-generativeai>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
shared = { workspace = true }
