[project]
name = "a2a_agent"
version = "0.0.1"
description = "Google ADK A2A agent — prior authorization for lumbar MRI (CPT 72148)."
requires-python = ">=3.11"
dependencies = [
    # Shared Pydantic contracts (repo-root workspace member, not PyPI)
    "shared",

    # ADK + A2A protocol.
    # a2a-sdk 1.0 reorganised modules (a2a.server.apps -> new path) and breaks
    # google-adk<=1.31.1's internal import `from a2a.server.apps import ...`.
    # Cap at <1.0 until google-adk ships a version that imports from the new
    # a2a-sdk namespace. See a2a_agent/REFERENCE.md for upstream-sync workflow.
    "google-adk>=1.25.0,<2.0",
    "a2a-sdk[http-server]>=0.3.0,<1.0",

    # HTTP client used by MCP tool bindings + future FHIR calls
    "httpx>=0.28.0",

    # ASGI server for the uvicorn entry point
    "uvicorn>=0.41.0",

    # Env var loading for local dev
    "python-dotenv>=1.0.0",

    # Shared across repo; kept explicit here so tree-shaking works
    "pydantic>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
shared = { workspace = true }
