[project]
name = "mcp_server"
version = "0.0.1"
description = "FastMCP server exposing 3 prior-auth tools (forked from PO community MCP)."
requires-python = ">=3.11"
dependencies = [
    "shared",
    "pydantic>=2.7,<3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "google-generativeai>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
shared = { workspace = true }
