[project]
name = "shared"
version = "0.0.1"
description = "Shared Pydantic contracts between mcp_server and a2a_agent."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
